0024383: Access violation during STEP file import

Protection for null magnitude of vector written in file was added.

Test cases for issue CR24383